--- a/kavek.css
+++ b/kavek.css
@@ -5,11 +5,13 @@ body {
     background-position: center;
     background-color: #b97a57;
 }
+
 h1 {
     font-size: 24pt;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: grey;
+    color: #873e1a;
     text-align: center;
+    text-decoration: underline;
 }
 
 h2 {
@@ -17,10 +19,7 @@ h2 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #873e1a;
     text-align: center;
-}
-
-img {
-    padding-top: 16px;
+    text-decoration: underline;
 }
 
 a:link {
@@ -37,4 +36,24 @@ a:link {
 
 .main {
     text-align: left;
+}
+
+p {
+    font-size: 16pt;
+    font-weight: bold;
+}
+
+img {
+    width: 172px;
+    border: 4px solid wheat;
+}
+
+.picturetext {
+    width: 150px;
+    font-size: 15pt;
+    font-weight: bold;
+    padding: 15px;
+    margin: 0px 0px 20px 0px;
+    text-align: left;
+    background-color: wheat;
 }
