--- a/Sutik(Tomi)/sutik.css
+++ b/Sutik(Tomi)/sutik.css
@@ -8,10 +8,12 @@ body {
 
 h1 {
     font-size: 24pt;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
     text-align: center;
     text-decoration: underline;
+    font-weight: 2000;
+    font-size: 50pt;
 }
 
 h2 {
@@ -23,8 +25,8 @@ h2 {
 }
 
 a:link {
-    background-color: brown;
-    color: blue;
+    color: royalblue;
+    font-size: 30px;
 }
 
 .center {
@@ -45,20 +47,29 @@ p {
 }
 
 img {
-    width: 172px;
+    width: 250px;
     border: 4px solid white;
 }
 
 .picturetext {
-    width: 150px;
-    font-size: 15pt;
+    width: 228px;
+    font-size: 17pt;
     font-weight: bold;
     padding: 15px;
     margin: 0px 0px 20px 0px;
-    text-align: left;
+    text-align: center;
     background-color:white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 p.bemutatoszoveg {
+    color: white;
+    text-align: center;
+    font-size: 25pt;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 900;
+}
+
+p.linkszoveg {
     color: white;
 }
