--- a/Sutik/sutik.css
+++ b/Sutik/sutik.css
@@ -1,74 +1,127 @@
-body {
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Popins",sans-serif;
+}
+
+body{
     background-image: url(sutihatter.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    background-color: #b97a57;
 }
 
-h1 {
-    font-size: 24pt;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: white;
+.bemutato{
     text-align: center;
-    text-decoration: underline;
-    font-weight: 2000;
-    font-size: 50pt;
 }
 
-h2 {
-    font-size: 20pt;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: white;
+.egesz{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 100vh;
+}
+
+.box{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px;
+    background: #060c21;
+    transition: 1.3s;
+}
+
+.box:hover{
+    height: 600px;
+}
+
+.box .imgBx{
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.box .imgBx img{
+    max-width: 100%;
+    opacity: 0.33;
+    transition: 0.5s;
+}
+
+.box:hover .imgBx img{
+    opacity: 1;
+}
+
+.box::before{
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index: -1;
+}
+
+.box::after{
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index: -2;
+    filter: blur(5px);
+}
+
+
+.box .content{
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    height: 290px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    text-decoration: underline;
+    opacity: 0;
+    transition: 0.5s;
 }
 
-a:link {
+.box:hover .content{
+    opacity: 1;
+}
+
+.box .content h2{
+    font-size: 20px;
+    color: #fff;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 1px;
+}
+
+.box .content h2 span{
+    font-size: 14px;
+    color: #fff;
+    font-weight: 200;
+    letter-spacing: 2px;
+}
+
+h1{
+    color: #fff;
+    font-size: 50px;
+}
+
+a{
     font-size: 30px;
-}
-
-.center {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    width: 600px;
-}
-
-.main {
-    text-align: left;
-}
-
-p {
-    font-size: 16pt;
-    font-weight: bold;
-    color: black;
-}
-
-img {
-    width: 250px;
-    border: 4px solid white;
-}
-
-.picturetext {
-    width: 228px;
-    font-size: 17pt;
-    font-weight: bold;
-    padding: 15px;
-    margin: 0px 0px 20px 0px;
-    text-align: center;
-    background-color:white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-p.bemutatoszoveg {
-    color: white;
-    text-align: center;
-    font-size: 25pt;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: 900;
-}
-
-p.linkszoveg {
-    color: white;
+    color: pink;
 }
