--- a/Fooldal/oldal.css
+++ b/Fooldal/oldal.css
@@ -9,6 +9,7 @@
     background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(img1.jpg);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     font-family: Arial, Helvetica, sans-serif;
 }
 .nav-bar{
