--- a/Kavek/kavek.css
+++ b/Kavek/kavek.css
@@ -1,18 +1,23 @@
-body {
-    background-image: url(coffeebg.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    background-color: #b97a57;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-h1 {
-    font-size: 24pt;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #873e1a;
-    text-align: center;
-    text-decoration: underline;
+span {
+    color: crimson
 }
+
+body {
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img1.jpg);
+    background-size: cover;
+    background-position: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background-attachment: fixed;
+}
+
 
 h2 {
     font-size: 20pt;
@@ -20,18 +25,6 @@ h2 {
     color: #873e1a;
     text-align: center;
     text-decoration: underline;
-}
-
-a:link {
-    background-color: brown;
-    color: white;
-}
-
-.center {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    width: 600px;
 }
 
 .main {
@@ -43,11 +36,6 @@ p {
     font-weight: bold;
 }
 
-img {
-    width: 172px;
-    border: 4px solid wheat;
-}
-
 .picturetext {
     width: 150px;
     font-size: 15pt;
@@ -56,4 +44,168 @@ img {
     margin: 0px 0px 20px 0px;
     text-align: left;
     background-color: wheat;
+}
+
+
+
+
+.box {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px;
+    background: #060c21;
+    transition: 1.3s;
+}
+
+.box:hover {
+    height: 600px;
+}
+
+.box .imgBx {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.box .imgBx img {
+    width: 500px;
+    max-width: 100%;
+    opacity: 0.33;
+    transition: 0.5s;
+}
+
+.box:hover .imgBx img {
+    opacity: 1;
+}
+
+.box::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index: -1;
+}
+
+.box::after {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    z-index: -2;
+    filter: blur(5px);
+}
+
+
+.box .content {
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    height: 290px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.box:hover .content {
+    opacity: 1;
+}
+
+.box .content h2 {
+    font-size: 20px;
+    color: #fff;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 1px;
+}
+
+.nav-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 80px;
+}
+
+.nav-bar .title {
+    color: #fff;
+    font-size: 67px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.nav-bar p {
+    position: absolute;
+    margin-top: 90px;
+    margin-left: 50px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.box .content h2 span {
+    font-size: 14px;
+    color: #fff;
+    font-weight: 200;
+    letter-spacing: 2px;
+}
+
+.egesz {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 100vh;
+}
+
+.menu li {
+    list-style: none;
+    display: inline-block;
+}
+
+.menu li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 27px;
+    font-weight: 600;
+    margin-left: 25px;
+    transition: .4s ease;
+}
+
+.menu li a:hover {
+    color: crimson;
+    padding: 5px 10px;
+    border: 2px solid #fff;
+}
+
+.home {
+    height: 400px;
+    padding: 70px;
+}
+
+.title-1 {
+    font-size: 56px;
+    color: #fff;
+    font-weight: 600;
+}
+
+.home p {
+    color: lemonchiffon;
+    font-size: 20px;
+    padding-top: 10px;
 }
