--- a/Sutik/sutik.css
+++ b/Sutik/sutik.css
@@ -4,11 +4,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Popins",sans-serif;
 }
 
 body{
-    background-image: url(sutihatter.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(sutihatter.jpg);
 }
 
 .bemutato{
@@ -20,7 +19,8 @@ body{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    min-height: 100vh;
+    min-height: 70vh;
+    font-family: "Popins",sans-serif;
 }
 
 .box{
@@ -32,7 +32,7 @@ body{
     align-items: center;
     margin: 40px;
     background: #060c21;
-    transition: 1.3s;
+    transition: 0.7s;
 }
 
 .box:hover{
@@ -50,7 +50,7 @@ body{
 
 .box .imgBx img{
     max-width: 100%;
-    opacity: 0.33;
+    opacity: 0.3;
     transition: 0.5s;
 }
 
@@ -65,7 +65,7 @@ body{
     left: -2px;
     right: -2px;
     bottom: -2px;
-    background: #fff;
+    background: white;
     z-index: -1;
 }
 
@@ -101,7 +101,7 @@ body{
 }
 
 .box .content h2{
-    font-size: 20px;
+    font-size: 25px;
     color: #fff;
     font-weight: 500;
     line-height: 20px;
@@ -109,7 +109,7 @@ body{
 }
 
 .box .content h2 span{
-    font-size: 14px;
+    font-size: 15px;
     color: #fff;
     font-weight: 200;
     letter-spacing: 2px;
@@ -120,7 +120,46 @@ h1{
     font-size: 50px;
 }
 
-a{
-    font-size: 30px;
-    color: pink;
+
+
+.price{
+    color: wheat;
+    font-size: 20px;
+}
+
+.bemutato{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav-bar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 80px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(000, 000, 000, 0.8)
+}
+
+.nav-bar .title{
+    color: #fff;
+    font-size: 67px;
+    font-weight: 600;
+}
+
+.menu li{
+    list-style: none;
+    display: inline-block;
+}
+.menu li a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 27px;
+    font-weight: 600;
+    margin-left: 25px;
+    transition: .4s ease;
+}
+.menu li a:hover{
+    color: crimson;
+    padding: 5px 10px;
+    border: 2px solid #fff;
 }
