--- a/Kavek/kavek.css
+++ b/Kavek/kavek.css
@@ -1,39 +1,62 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    overflow-y:scroll;
+}
+.container {
+    max-width: 100%;
+    padding: 20px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.6)
+}
 
-span {
-    color: crimson
+.navbar-menu a {
+    color: #fff;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 100;
+    padding: 12px 15px;
+    border-radius: 2px;
+    display: inline-block;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: 0.4s;
+}
+
+.navbar-menu a:hover {
+    background-color: #fff;
+    color: #000;
 }
 
 body {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img1.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(coffeebg.jpg);
     background-size: cover;
     background-position: center;
-    font-family: Arial, Helvetica, sans-serif;
     background-attachment: fixed;
 }
-
 
 h2 {
     font-size: 20pt;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #873e1a;
     text-align: center;
-    text-decoration: underline;
 }
 
 .main {
     text-align: left;
 }
 
-p {
-    font-size: 16pt;
-    font-weight: bold;
+.price {
+    color: wheat;
+    font-size: 20px;
 }
 
 .picturetext {
@@ -135,31 +158,16 @@ p {
     letter-spacing: 1px;
 }
 
-.nav-bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px 80px;
-}
-
-.nav-bar .title {
+.box .content h2 {
+    font-size: 25px;
     color: #fff;
-    font-size: 67px;
-    font-weight: 600;
-    cursor: pointer;
-}
-
-.nav-bar p {
-    position: absolute;
-    margin-top: 90px;
-    margin-left: 50px;
-    color: #fff;
-    font-size: 20px;
     font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 1px;
 }
 
 .box .content h2 span {
-    font-size: 14px;
+    font-size: 15px;
     color: #fff;
     font-weight: 200;
     letter-spacing: 2px;
@@ -173,39 +181,17 @@ p {
     min-height: 100vh;
 }
 
-.menu li {
-    list-style: none;
-    display: inline-block;
-}
-
-.menu li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 27px;
-    font-weight: 600;
-    margin-left: 25px;
-    transition: .4s ease;
-}
-
-.menu li a:hover {
-    color: crimson;
-    padding: 5px 10px;
-    border: 2px solid #fff;
-}
-
-.home {
-    height: 400px;
-    padding: 70px;
-}
 
 .title-1 {
-    font-size: 56px;
+    font-size: 40px;
     color: #fff;
     font-weight: 600;
 }
-
-.home p {
-    color: lemonchiffon;
-    font-size: 20px;
-    padding-top: 10px;
+.kosonto{
+    text-align: center;
+    color: white;
+    font-size: 65px;
+    margin-top: 20px;
+    font-family: "Poppins";
+    font-weight: bold;
 }
