--- a/Kavek/kavek.css
+++ b/Kavek/kavek.css
@@ -103,9 +103,9 @@ h2 {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+    max-width: 300px;
+    height: auto;
+    box-sizing: content-box;
 }
 
 .box .imgBx img {
