--- a/Fooldal/ok.css
+++ b/Fooldal/ok.css
@@ -31,7 +31,7 @@
     font-family: 'Raleway',sans-serif;
     font-weight: 100;
     padding: 12px 15px;
-    border-radius: 2px;
+    border-radius: 20px;
     display: inline-block;
     text-transform: uppercase;
     text-decoration: none;
@@ -43,7 +43,7 @@
     color: #000;
   }
   .description{
-    position: absolute;
+    position:absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -59,6 +59,7 @@
     color: #fff;
     letter-spacing: 2px;
     line-height: 50px;
+    margin-top: 300px;
   }
   .description h1{
     font-size: 35px;
@@ -70,7 +71,7 @@
     line-height: 70px;
   }
   .description p{
-    font-size: 14px;
+    font-size: 20px;
     font-family: 'Raleway',sans-serif;
     font-weight: 100;
     color: #fff;
