--- a/Sutik/sutik.css
+++ b/Sutik/sutik.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
-*
-{
+
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
 }
 
 body{
@@ -38,22 +40,22 @@ html {
 }
 
 .box:hover{
-    height: 600px;
+    height: 540px;
 }
 
 .box .imgBx{
     position:absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+    max-width: 300px;
+    height: auto;
+    box-sizing: content-box;
 }
 
 .box .imgBx img{
     max-width: 100%;
     opacity: 0.3;
-    transition: 0.5s;
+    transition: 0.7s;
 }
 
 .box:hover .imgBx img{
@@ -89,7 +91,7 @@ html {
     left: 10px;
     right: 10px;
     bottom: 10px;
-    height: 290px;
+    height: 260px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,47 +127,99 @@ html {
 }
 
 
-.nav-bar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px 80px;
-    font-family: "Popins",sans-serif;
-    background-color: rgba(000, 000, 000, 0.8)
-}
-
-.nav-bar .title{
-    color: #fff;
-    font-size: 40px;
-    font-weight: 600;
-}
-
-.menu li{
-    list-style: none;
-    display: inline-block;
-}
-.menu li a{
-    color: #fff;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 100;
-    padding: 12px 15px;
-    border-radius: 2px;
-    display: inline-block;
-    text-transform: uppercase;
-    text-decoration: none;
-    transition: 0.4s;
-}
-.menu li a:hover{
-    background-color: #fff;
-    color: #000;
-}
 
 .kosonto{
     text-align: center;
     color: white;
-    font-size: 65px;
+    font-size: 60px;
     margin-top: 20px;
     font-family: "Poppins";
     font-weight: bold;
 }
+
+
+
+nav{
+    height: 100px;
+    width: 100%;
+    background:black;
+  }
+  label.logo{
+    color: white;
+    font-size: 40px;
+    line-height: 100px;
+    padding: 0 100px;
+    font-weight: bold;
+  }
+  nav ul{
+    float: right;
+    margin-right: 20px;
+  }
+  nav ul li{
+    display: inline-block;
+    line-height: 100px;
+    margin: 0 5px;
+  }
+  nav ul li a{
+    color: white;
+    font-size: 20px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+  }
+  a:hover{
+    background: white;
+    transition: .5s;
+  }
+  .checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+  }
+  #check{
+    display: none;
+  }
+  @media (max-width: 952px){
+    label.logo{
+      font-size: 30px;
+      padding-left: 50px;
+    }
+    nav ul li a{
+      font-size: 16px;
+    }
+  }
+  @media (max-width: 858px){
+    .checkbtn{
+      display: block;
+      margin-top: 25px;
+    }
+    ul{
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      background: #2c3e50;
+      top: 80px;
+      left: -100%;
+      text-align: center;
+      transition: all .5s;
+    }
+    nav ul li{
+      display: block;
+      margin: 50px 0;
+      line-height: 30px;
+    }
+    nav ul li a{
+      font-size: 20px;
+    }
+    a:hover,a.active{
+      background: none;
+      color: #0082e6;
+    }
+    #check:checked ~ ul{
+      left: 0;
+    }
+  }
