--- a/Sutik/sutik.css
+++ b/Sutik/sutik.css
@@ -1,159 +1,166 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
+   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
 
 body{
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.6)),url(sutihatter.jpg);
+  position: relative;
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.6)),url(sutihatter.jpg);
 }
 
 .bemutato{
-    text-align: center;
+  text-align: center;
 }
 html {
-    overflow-y:scroll;
+  overflow-y:scroll;
 }
 .egesz{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    min-height: 80vh;
-    font-family: "Popins",sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  min-height: 80vh;
+  font-family: "Popins",sans-serif;
 }
 
 .box{
-    position: relative;
-    width: 270px;
-    height: 270px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 40px;
-    background: #060c21;
-    transition: 0.7s;
+  position: relative;
+  width: 270px;
+  height: 270px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px;
+  background: #060c21;
+  transition: 0.9s;
 }
 
 .box:hover{
-    height: 540px;
+  height: 544px;
 }
 
 .box .imgBx{
-    position:absolute;
-    top: 0;
-    left: 0;
-    max-width: 300px;
-    height: auto;
-    box-sizing: content-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 300px;
+  height: auto;
+  box-sizing: content-box;
 }
 
 .box .imgBx img{
-    max-width: 100%;
-    opacity: 0.3;
-    transition: 0.7s;
+  max-width: 100%;
+  opacity: 0.3;
+  transition: 0.7s;
 }
 
 .box:hover .imgBx img{
-    opacity: 1;
+  opacity: 1;
 }
 
 .box::before{
-    content: "";
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    background: white;
-    z-index: -1;
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  background: white;
+  z-index: -1;
 }
 
 .box::after{
-    content: "";
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    background: #fff;
-    z-index: -2;
-    filter: blur(5px);
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  background: #fff;
+  z-index: -2;
+  filter: blur(5px);
 }
 
 
 .box .content{
-    position: absolute;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    height: 260px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    opacity: 0;
-    transition: 0.5s;
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  height: 270px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: 1;
 }
 
 .box:hover .content{
-    opacity: 1;
+  opacity: 1;
 }
 
 .box .content h2{
-    font-size: 25px;
-    color: #fff;
-    font-weight: 500;
-    line-height: 20px;
-    letter-spacing: 1px;
+  font-size: 25px;
+  color: #fff;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 1px;
 }
 
 .box .content h2 span{
-    font-size: 15px;
-    color: #fff;
-    font-weight: 200;
-    letter-spacing: 2px;
+  font-size: 15px;
+  color: #fff;
+  font-weight: 200;
+  letter-spacing: 2px;
 }
 
 
 
 .price{
-    color: wheat;
-    font-size: 20px;
+  color: wheat;
+  font-size: 20px;
 }
 
 
-
 .kosonto{
-    text-align: center;
-    color: white;
-    font-size: 60px;
-    margin-top: 20px;
-    font-family: "Poppins";
-    font-weight: bold;
+  text-align: center;
+  color: white;
+  font-size: 70px;
+  font-family: "Poppins";
+  font-weight: bold;
+  margin-top: 10px;
 }
 
 
 
 nav{
-    height: 100px;
+    height: 130px;
     width: 100%;
     background:black;
+    position: relative;
+    top: 0px;
+    padding-top: 18px;
   }
   label.logo{
     color: white;
-    font-size: 40px;
+    font-size: 60px;
     line-height: 100px;
-    padding: 0 100px;
+    padding: 0 10px;
+    margin-left: 25px;
     font-weight: bold;
+    padding-left: 40px;
   }
   nav ul{
     float: right;
     margin-right: 20px;
+    z-index: 4;
   }
   nav ul li{
     display: inline-block;
@@ -162,7 +169,7 @@ nav{
   }
   nav ul li a{
     color: white;
-    font-size: 20px;
+    font-size: 27px;
     padding: 7px 13px;
     border-radius: 3px;
     text-transform: uppercase;
@@ -171,55 +178,27 @@ nav{
     background: white;
     transition: .5s;
   }
-  .checkbtn{
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-  }
-  #check{
-    display: none;
-  }
-  @media (max-width: 952px){
+
+  @media (max-width: 1019px){
     label.logo{
-      font-size: 30px;
-      padding-left: 50px;
+      display: none;
     }
-    nav ul li a{
-      font-size: 16px;
-    }
-  }
-  @media (max-width: 858px){
-    .checkbtn{
-      display: block;
-      margin-top: 25px;
-    }
-    ul{
-      position: fixed;
-      width: 100%;
-      height: 100vh;
-      background: #2c3e50;
-      top: 80px;
-      left: -100%;
+    nav ul {
+      float: none;
       text-align: center;
-      transition: all .5s;
     }
-    nav ul li{
-      display: block;
-      margin: 50px 0;
-      line-height: 30px;
-    }
-    nav ul li a{
-      font-size: 20px;
-    }
-    a:hover,a.active{
-      background: none;
-      color: #0082e6;
-    }
-    #check:checked ~ ul{
-      left: 0;
+    .kosonto{
+      font-size: 60px;
     }
   }
+
+@media (max-width:500px){
+  .kosonto{
+    font-size: 12vmin;
+  }
+  nav ul li a{
+    font-size: 6vmin;
+    padding: 4px;
+  }
+
+}
