--- a/Fooldal/ok.css
+++ b/Fooldal/ok.css
@@ -12,15 +12,6 @@
   html {
     overflow-y:scroll;
 }
-  .container{
-    max-width: 100%;
-    padding: 20px 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.6)
-
-  }
 
   .description{
     position:absolute;
@@ -28,7 +19,7 @@
     left: 50%;
     transform: translate(-50%,-50%);
     color: #fff;
-    padding: 0 70px;
+    padding: 0 60px;
     width: 100%;
     text-align: center;
   }
@@ -59,21 +50,17 @@
     line-height: 25px;
     margin-bottom: 30px;
   }
-  .h1{
-    font-size: 14px;
-    font-family: 'Raleway',sans-serif;
-    font-weight: 100;
-    color: #fff;
-    letter-spacing: 2px;
-    line-height: 25px;
-    margin-bottom: 30px;
-  }
 
   .abt{
     font-size: 30px;
     color: #fff;
   }
 
+.elerhetosegek{
+  list-style: none;
+  font-size: 20px;
+  margin-top: 30px;
+}
 
 
   nav{
@@ -131,4 +118,38 @@
     padding: 4px;
   }
 
+}
+
+
+
+@media (max-width: 550px){
+  .description h2{
+    font-size: 8vmin;
+  }
+
+  .description h1{
+    font-size: 5.2vmin;
+  }
+
+  .leiras{
+    font-size: 4vmin;
+  }
+  .description{
+    padding: 0 10px;
+    height: 350px;
+    top: 40%;
+  }
+  .elerhetosegek{
+    font-size: 3vmin;
+    height: 80px;
+}
+
+@media (max-width: 350px){
+  .abt{
+    font-size: 8vmin;
+  }
+  .leiras{
+    margin-bottom: 5px;
+  }
+}
 }
