--- a/Kavek/kavek.css
+++ b/Kavek/kavek.css
@@ -106,7 +106,7 @@ h2 {
     position: absolute;
     left: 10px;
     right: 10px;
-    bottom: 10px;
+    bottom: 13px;
     height: 290px;
     display: flex;
     justify-content: center;
@@ -148,7 +148,7 @@ h2 {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    min-height: 80vh;
+    min-height: 650px;
 }
 
 
@@ -211,6 +211,10 @@ nav{
     .kosonto{
       font-size: 60px;
     }
+    .box .content{
+      bottom: 55px;
+      height: 200px;
+    }
   }
 
 @media (max-width:500px){
@@ -227,5 +231,15 @@ nav{
   }
   .box .content{
     bottom: 30px;
+  }
+}
+
+@media (max-width:1430px){
+  .box{
+    width: 225px;
+    height: 225px;
+  }
+  .kosonto{
+    font-size: 55px;
   }
 }
