--- a/Sutik/sutik.css
+++ b/Sutik/sutik.css
@@ -24,7 +24,7 @@ html {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  min-height: 80vh;
+  min-height: 650px;
   font-family: "Popins",sans-serif;
 }
 
@@ -91,7 +91,7 @@ html {
   position: absolute;
   left: 10px;
   right: 10px;
-  bottom: 10px;
+  bottom: 13px;
   height: 270px;
   display: flex;
   justify-content: center;
@@ -190,6 +190,10 @@ nav{
     .kosonto{
       font-size: 60px;
     }
+    .box .content{
+      bottom: 55px;
+      height: 200px;
+    }
   }
 
 @media (max-width:500px){
@@ -206,5 +210,15 @@ nav{
   }
   .box .content{
     bottom: 30px;
+  }
+}
+
+@media (max-width:1430px){
+  .box{
+    width: 225px;
+    height: 225px;
+  }
+  .kosonto{
+    font-size: 55px;
   }
 }
